WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152095
Modern IDB: storage/indexeddb/database-closepending-flag.html fails
https://bugs.webkit.org/show_bug.cgi?id=152095
Summary
Modern IDB: storage/indexeddb/database-closepending-flag.html fails
Brady Eidson
Reported
2015-12-09 14:11:33 PST
Modern IDB: storage/indexeddb/database-closepending-flag.html fails The server-side checks the closepending flag before dispatching the event to the client, but due to the inherent asynchronous race between server and client, the client needs to check its closePending flag as well.
Attachments
Patch v1
(3.20 KB, patch)
2015-12-09 14:13 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-09 14:13:21 PST
Created
attachment 267045
[details]
Patch v1
WebKit Commit Bot
Comment 2
2015-12-09 14:46:31 PST
Comment on
attachment 267045
[details]
Patch v1 Clearing flags on attachment: 267045 Committed
r193871
: <
http://trac.webkit.org/changeset/193871
>
WebKit Commit Bot
Comment 3
2015-12-09 14:46:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug