Modern IDB: storage/indexeddb/database-closepending-flag.html fails. https://bugs.webkit.org/show_bug.cgi?id=152095

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

The server-side checks the closepending flag before dispatching the event to the client,
but due to the inherent asynchronous race between server and client, the client needs to
check its closePending flag as well.

* Modules/indexeddb/client/IDBDatabaseImpl.cpp:
(WebCore::IDBClient::IDBDatabase::fireVersionChangeEvent): Don't fire if m_closePending is set.

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193871 268f45cc-cd09-0410-ab3c-d52691b4dbfc